--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
             <div class="header">
                 <a href="" class="header__logo"></a>
                 <ul class="header-list">
-                    <li class="header-list__item"></li>
-                    <li class="header-list__item"></li>
-                    <li class="header-list__item"></li>
-                    <li class="header-list__item"></li>
-                    <li class="header-list__item"></li>
-                    <li class="header-list__item"></li>
-                    <li class="header-list__item"></li>
-                    <li class="header-list__item"></li>
-                    <li class="header-list__item"></li>
+                    <li class="header-list__item">Home</li>
+                    <li class="header-list__item">About</li>
+                    <li class="header-list__item">Contents</li>
+                    <li class="header-list__item">Books</li>
+                    <li class="header-list__item">Education</li>
+                    <li class="header-list__item">Skills</li>
+                    <li class="header-list__item">Portfolio</li>
+                    <li class="header-list__item">Clients</li>
+                    <li class="header-list__item">Contact</li>
                 </ul>
             </div>  
             <div class="wrapper">
