--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Bukee</title>
 </head>
 <body>
-    <header>
-        <div class="page-main">
+    <div class="page-main">
+        <header>
             <div class="header">
                 <a href="" class="header__logo"></a>
                 <ul class="header-list">
@@ -23,6 +23,7 @@
                     <li class="header-list__item">Contact</li>
                 </ul>
             </div>  
+        </header>
             <div class="wrapper">
                 <div class="block-book">
                     <div></div>
@@ -36,9 +37,10 @@
                     </div>
                 </div>
              </div>
-        </div>
-        
-    </header>
+        </div> 
     
+    <main>
+
+    </main>
 </body>
 </html>
