--- a/index.html
+++ b/index.html
@@ -37,10 +37,26 @@
                     </div>
                 </div>
              </div>
-        </div> 
-    
-    <main>
-
-    </main>
+ <main> 
+     <div class="wrapper">
+        <div class="block-author">
+            <div class="block-text">
+                <p class="block-text__name">- Book Author</p>   
+                <h2 class="block-text__title">Emma Anderson <span>A room without books is like a body without a soul</span></h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.</p>
+                <a href="" class="block-text__btn">Read full biography	</a> 
+            </div>  
+            <div></div>   
+            <div class="block-numbers">
+                <div class="block-number__item"><span>12</span><span>Total published books</span></div>
+                <div class="block-number__item"><span>5</span><span>Happy readers</span></div>
+                <div class="block-number__item"><span>15,000</span><span>Happy readers</span></div>
+            </div>
+        </div>
+    </div>
+    </div>
+  </div>
+</main>   
 </body>
 </html>
